--- a/Blazor App Mixed Host Solution/Client/BlazorApp.Client.csproj
+++ b/Blazor App Mixed Host Solution/Client/BlazorApp.Client.csproj
@@ -1,18 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-
+    <TargetFramework>netstandard2.1</TargetFramework>
     <RunCommand>dotnet</RunCommand>
     <RunArguments>blazor serve</RunArguments>
-
     <LangVersion>7.3</LangVersion>
+
+    <_RazorComponentInclude>Pages\**\*.cshtml</_RazorComponentInclude>
+    <_RazorComponentInclude>Shared\**\*.cshtml</_RazorComponentInclude>
+    <_RazorComponentInclude>*.cshtml</_RazorComponentInclude>
+
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.8.0-preview-19104-04" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.8.0-preview-19104-04" PrivateAssets="all" />
-    <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.7.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.9.0-preview3-19154-02" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.9.0-preview3-19154-02" PrivateAssets="all" />
+    <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.8.0-preview-19104-04" />
   </ItemGroup>
 
   <ItemGroup>
