--- a/Blazor App Mixed Host Solution/Server/Properties/launchSettings.json
+++ b/Blazor App Mixed Host Solution/Server/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:54964/",
-      "sslPort": 0
+      "sslPort": 44342
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "$safeprojectname$": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:54966/"
+      }
     }
   }
 }
